Went back to fix nav-header - added z-index to header so content will float behind - will push as the branch is behind a few commits

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -12,4 +12,5 @@ header {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1000;
 }
