--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,7 @@ header {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1000;
 }
 
 nav {
